--- a/packages/pihole.yaml
+++ b/packages/pihole.yaml
@@ -45,22 +45,22 @@ sensor:
 
 
 # moved back from /config/groups/pihole.yaml
-group:
-  Pi Hole:
-    name: "Pi Hole"
-    icon: mdi:alert-octagon
-    entities:
-      - switch.pihole_switch
-      - sensor.pihole_dns_queries_today
-      - sensor.pihole_ads_blocked_today
-      - sensor.pihole_ads_percentage_today
-      - sensor.pihole_domains_blocked
-      - sensor.pihole_ads_percentage_blocked_today
-      - sensor.pihole_dns_unique_domains
-      - sensor.pihole_dns_unique_clients
-      - sensor.pihole_dns_queries_cached
-      - sensor.pihole_queries_cached
-      - sensor.pihole_dns_queries_forwarded
-      - sensor.pihole_unique_clients
-      - sensor.pihole_seen_clients
-      - sensor.pihole_clients_ever_seen
+# group:
+#   Pi Hole:
+#     name: "Pi Hole"
+#     icon: mdi:alert-octagon
+#     entities:
+#       - switch.pihole_switch
+#       - sensor.pihole_dns_queries_today
+#       - sensor.pihole_ads_blocked_today
+#       - sensor.pihole_ads_percentage_today
+#       - sensor.pihole_domains_blocked
+#       - sensor.pihole_ads_percentage_blocked_today
+#       - sensor.pihole_dns_unique_domains
+#       - sensor.pihole_dns_unique_clients
+#       - sensor.pihole_dns_queries_cached
+#       - sensor.pihole_queries_cached
+#       - sensor.pihole_dns_queries_forwarded
+#       - sensor.pihole_unique_clients
+#       - sensor.pihole_seen_clients
+#       - sensor.pihole_clients_ever_seen
